# unitrade-analytics

./: .dockerignore  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: docker-arm64.yml
config/: default.yaml
docker/: Dockerfile  docker-compose.yml  prometheus.yml
docs/: MASTER_DESIGN_BIBLE.md
docs/plans/: 2026-01-08-anomaly-detector-price-growth-trigger-design.md
scripts/: analyze_telegram_channel_filters.py  backtest_atr_range_breakout.py  backtest_binance_bookdepth_obi.py  run_market_scanner.py  run_scanner.py
src/: check_ban.py
src/unitrade/: __init__.py  cli.py  main.py  metrics.py
src/unitrade/analytics/: __init__.py  institution_retail.py  open_interest.py  orderbook.py  report.py  trade.py
src/unitrade/backtest/: __init__.py  backtester.py
src/unitrade/bot/: __init__.py  aiogram_bot.py  bot_handler.py  telegram_bot.py  telegram_keyboard.py  telegram_router.py
src/unitrade/connection/: __init__.py  base.py  binance.py  bybit.py  oi_manager.py
src/unitrade/core/: __init__.py  config.py  exceptions.py  time.py
src/unitrade/order/: __init__.py  id_manager.py  rate_limiter.py  reconciler.py  router.py
tests/unit/: test_anomaly_detector_price_growth.py  test_atr_range_breakout_backtest.py  test_big_trade_monitor.py  test_fund_flow.py  test_oi_price_monitor.py  test_open_interest.py  test_orderbook.py  test_realtime_service_cvd_usdt.py  test_redis_state_first_ranked.py  test_rising_index_trend_score.py  test_scanner.py  test_signal_generator.py  test_trade.py  test_wavetrend_scanner.py
(+31 files in other folders)
